updated sonarlit issues