@@ -1,6 +1,5 @@
 package com.example.demo.jwt;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -16,7 +15,6 @@ import jakarta.servlet.http.HttpServletResponse;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -26,13 +24,17 @@ import org.slf4j.LoggerFactory;
 @Component
 public class JwtRequestFilter extends OncePerRequestFilter {
 
-    private static final Logger logger = LoggerFactory.getLogger(JwtRequestFilter.class);
+    private static final Logger loggers = LoggerFactory.getLogger(JwtRequestFilter.class);
 
-    @Autowired
-    private UserDetailsService userDetailsService;
+    private final UserDetailsService userDetailsService;
 
-    @Autowired
-    private JwtUtil jwtUtil;
+    private final JwtUtil jwtUtil;
+    
+    
+    public JwtRequestFilter( UserDetailsService userDetailsService,JwtUtil jwtUtil) {
+    	this.userDetailsService = userDetailsService;
+    	this.jwtUtil= jwtUtil;
+    }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
@@ -46,7 +48,7 @@ public class JwtRequestFilter extends OncePerRequestFilter {
             for (Cookie cookie : cookies) {
                 if (cookie.getName().equals("token")) {
                     jwtToken = cookie.getValue();
-                    logger.info("JWT Token found in cookies");
+                    loggers.info("JWT Token found in cookies");
                 }
             }
         }
@@ -54,27 +56,31 @@ public class JwtRequestFilter extends OncePerRequestFilter {
         if (jwtToken != null) {
             try {
                 username = jwtUtil.extractUsername(jwtToken);
-                logger.info("Extracted username from JWT Token: {}", username);
+                loggers.info("Extracted username from JWT Token: {}", username);
             } catch (IllegalArgumentException e) {
-                logger.error("Unable to get JWT Token", e);
+            	loggers.error("Unable to get JWT Token", e);
             } catch (ExpiredJwtException e) {
-                logger.warn("JWT Token has expired", e);
+                loggers.warn("JWT Token has expired", e);
             }
         }
 
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
             UserDetails userDetails = this.userDetailsService.loadUserByUsername(username);
 
-            if (jwtUtil.validateToken(jwtToken, userDetails)) {
+            boolean isTokenValid = jwtUtil.validateToken(jwtToken, userDetails);
+            if (isTokenValid) {
                 Claims claims = jwtUtil.extractAllClaims(jwtToken);
                 List<String> roles = claims.get("roles", List.class);
-                List<SimpleGrantedAuthority> authorities = roles.stream().map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                List<SimpleGrantedAuthority> authorities = roles.stream()
+                        .map(SimpleGrantedAuthority::new)
+                        .toList();
 
                 UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(userDetails, null, authorities);
                 SecurityContextHolder.getContext().setAuthentication(authenticationToken);
-                logger.info("Authenticated user: {}", username);
+                loggers.info("Authenticated user: {}", username);
             }
+
+            
         }
         chain.doFilter(request, response);
     }
